mesh/ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: router-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: router
spec:
  hosts:
  - "*"
  gateways:
  - router-gateway
  http:
  - match:
    - uri:
        exact: /route
    route:
    - destination:
        host: app-a
        port:
          number: 8080
